<resources>
    <string name="app_name">Report</string>
    <string name="alert_dialog_permission">Permission to save / access files on your device is required.</string>
    <string name="txt_to_allow">To allow</string>
    <string name="deny">Deny</string>
    <string name="txt_permission">Permission</string>
    <string name="txt_report_removed">Report successfully removed!</string>
    <string name="title_report_list">Reports List</string>
    <string name="title_report">Report</string>
    <string name="title_edit_report">Edit Report</string>
    <string name="back">Come Back</string>
    <string name="txt_report_save">Report saved!</string>
    <string name="txt_error_save">Error saving!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="txt_share_report">Share report</string>
    <string name="canceled">Canceled!</string>
    <string name="start">Begin</string>
    <string name="date">dd-MM-yyyy</string>
    <string name="txt_new_report">New report started!</string>
    <string name="txt_email">Provide a valid email address.</string>
    <string name="txt_enter_name_company">Enter the company name.</string>
    <string name="txt_enter_name_controller">Enter the name of the person responsible.</string>
    <string name="space_date">-</string>
    <string name="txt_to_clean">To clean</string>
    <string name="leave">Get out</string>
    <string name="save">To save</string>
    <string name="resume_date">Date: %1$s</string>
    <string name="item_selected">Selected\nItems\n%1$s</string>
    <string name="label_search">Search</string>
    <string name="txt_new_item_list">New item added!</string>
    <string name="txt_information_saved_automatically">Information saved automatically!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_check_networking">No internet connection</string>
    <string name="label_home_welcome">Welcome!</string>
    <string name="label_home_description">Create your reports much easier.</string>
    <string name="access">Access</string>
    <string name="label_home_not_register">Not registered?</string>
    <string name="register">Sign up</string>
    <string name="label_screen_login_hello">Hello Friend!</string>
    <string name="label_screen_login_lets_go">Let is start! Enter your email and password.</string>
    <string name="mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">log in</string>
    <string name="label_screen_login_forgot_password">Forgot your password?</string>
    <string name="label_to_recover">to recover</string>
    <string name="label_screen_register">Register!</string>
    <string name="label_screen_register_create">Create your account, enter your email and create a password!</string>
    <string name="name">Name</string>
    <string name="create">create</string>
    <string name="label_screen_already_register">Already registered?</string>
    <string name="label_screen_to_recovery">To recover!</string>
    <string name="label_screen_recovery_worry">Do not worry, we will recover your password!</string>
    <string name="label_go_to_home">Return to home screen</string>
    <string name="label_screen_update_password">Change Password!</string>
    <string name="label_screen_update_strong">Here you can change your password for a stronger one!</string>
    <string name="hint_new_password">new password</string>
    <string name="label_screen_update_info">To proceed with the upgrade please enter your current password below.</string>
    <string name="hint_current_password">current password</string>
    <string name="change">change</string>
    <string name="label_screen_remove_account">:( Delete account</string>
    <string name="label_screen_remove_info">By entering the password, your account will be deleted.</string>
    <string name="remove">to remove</string>
    <string name="insert">Insert</string>
    <string name="label_recover_password">Recover Password?</string>
    <string name="label_or">or</string>
    <string name="label_sign_insert_name">Insert your name.</string>
    <string name="label_sign_insert_photo">Insert photo</string>
    <string name="label_insert_password">Please enter password.</string>
    <string name="label_bottom_home">Image bottom home</string>
    <string name="label_login_facebook_failed">Facebook login failed, try again!</string>
    <string name="label_google_failed">Google login failed, try again!</string>
    <string name="label_login_social_failed">Social login failed!</string>
    <string name="label_please_entry_data">Please! Enter your data.</string>
    <string name="label_account_create">Account successfully created!</string>
    <string name="label_insert_data_create_account">Please! Enter your data for account creation.</string>
    <string name="label_account_removed">Account successfully removed!</string>
    <string name="label_recover_access_send">Access recovery started. Email sent.</string>
    <string name="label_failed">Failed! Try again</string>
    <string name="label_password_update">Password updated successfully</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="label_menu_home">Main screen</string>
    <string name="label_menu_new_report">New Report</string>
    <string name="label_menu_config">Account Options</string>
    <string name="label_menu_update_password">Change Password</string>
    <string name="label_menu_delete_account">Delete account</string>
    <string name="label_menu_others">Others</string>
    <string name="label_menu_about">About</string>
    <string name="label_menu_logout">Get out</string>
    <string name="label_about_app">About our app, we hope you get more agility and spend less time creating your quality daily reports, so I offer you a robust app that does it for you!</string>
    <string name="label_entry_contact">Contact</string>
    <string name="label_more_work">More about my work</string>
    <string name="label_calling">Turn on</string>
    <string name="label_calling_whatsApp">I answer you now</string>
    <string name="label_feed_back">Send me your feed back</string>
    <string name="label_recommendation">My recommendations</string>
    <string name="label_not_whatsApp">We did not find WhatsApp.</string>
    <string name="label_insert_email">Please enter your registered email address!</string>
    <string name="facebook_app_id">2284363461680926</string>
    <string name="facebook_client_token">your_facebook_client_token_here</string>
    <string name="msg_take_image">Take a picture</string>
    <string name="msg_select_from_gallery">Select from Gallery</string>
    <string name="label_permission_camera_granted">Permission request granted.</string>
    <string name="label_permission_camera_denied">Permission denied request.</string>
    <string name="label_permission_read">We need permission to write data to save your report.</string>
    <string name="label_error_update_list">Error changing list item.</string>
    <string name="label_error_return">Something went wrong, try again!</string>
    <string name="label_photo_full">Full image</string>
    <string name="label_nothing_image">There is no image to display.</string>
    <string name="label_remove_item_list">Upon confirmation, the item will be removed from the list.</string>
    <string name="radio_according">C</string>
    <string name="radio_not_applicable">NA</string>
    <string name="radio_not_according">NC</string>
    <string name="according">According</string>
    <string name="not_applicable">Not applicable</string>
    <string name="not_according">Not compliant</string>
    <string name="image_note">note</string>
    <string name="image_result_photo">result photo</string>
    <string name="image_camera">camera</string>
    <string name="label_list_text">Text</string>
    <string name="label_list_title">Title</string>
    <string name="image_background_check">check color</string>
    <string name="label_not_observation">No comments</string>
    <string name="label_observation">Note</string>
    <string name="label_text_observation">Text…</string>
    <string name="label_nothing_report">No reports!</string>
    <string name="label_create_new_report">Create reports to populate your list.</string>
    <string name="label_no_items_list">No items in the list!</string>
    <string name="label_create_list_for_start">Create items for your list to start creating reports!</string>
    <string name="label_button_create_report">CREATE REPORT</string>
    <string name="label_image_empty">Empty layout image</string>
    <string name="label_report">Reporting signed by: %1$s</string>
    <string name="format_date">19/02/1984</string>
    <string name="label_image_overflow">overflow</string>
    <string name="label_title_resume">Title</string>
    <string name="label_description_resume">Description</string>
    <string name="label_score_resume">note</string>
    <string name="dev_renderson">Renderson Cerqueira</string>
    <string name="label_date">Date</string>
    <string name="mail_dev_renderson">renderson.cs@gmail.com</string>
    <string name="total_items">Total Items</string>
    <string name="label_list_selected">Selected Items</string>
    <string name="image_for_resume">Image for Resume</string>
    <string name="image_pdf">PDF Image</string>
    <string name="company">Company</string>
    <string name="share">To share</string>
    <string name="label_empty_list">Empty list!</string>
    <string name="check">CHECK</string>
    <string name="label_attach_report">Attached the company report %1$s completed! Held on the day</string>
    <string name="label_report_update">Report Changed!</string>
    <string name="controller">Controller</string>
    <string name="label_bottom_sheet_detail">Detail</string>
    <string name="label_loading">Loading…</string>
    <string name="label_note_value">10.0</string>
    <string name="label_note_value_scroll">Note: %1$s</string>
    <string name="label_note_value_scroll_xml">Note: 10</string>
    <string name="report_directory_img">Report</string>
    <string name="label_note_report">Note:</string>
    <string name="alert_clear_list">Clear list?</string>
    <string name="alert_clear_list_text">Do you really want to clean the section? This process will erase all your progress!</string>
    <string name="alert_check_list">Check List!</string>
    <string name="alert_check_list_text">No Compliant item that does not contain photo, check before saving! Item marked as Compliant and Not Applicable, does not fit this rule!</string>
    <string name="alert_remove_report">Remove report!</string>
    <string name="alert_remove_item_title">Remove item!</string>
    <string name="alert_remove_report_text">Do you really want to remove the report?</string>
    <string name="alert_empty_report">Empty report!</string>
    <string name="alert_empty_report_text">To save your report, you must have at least one item checked.</string>
    <string name="alert_leave_the_report">Leave report?</string>
    <string name="alert_leave_the_report_text">Do you really want to leave the report? You will lose all your progress!</string>
    <string name="alert_punctuation">Punctuation</string>
    <string name="alert_punctuation_label1">Company is %1$s, were selected</string>
    <string name="alert_punctuation_label2">items, the sum of the items generated the NOTE %1$s, clicking CONFIRM will save your report and generate a PDF with all the information!</string>
    <string name="error">Error</string>
    <string name="edit">To edit</string>
    <string name="summary">Summary</string>
    <string name="version_beta">Not implemented for Trial</string>
    <string name="label_create_items">CREATE ITEMS</string>
    <string name="label_theme">Theme</string>
</resources>