<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:title="@string/label_menu_home"
            android:id="@+id/dashboardFragment"
            android:icon="@drawable/ic_action_home"/>

        <item
            android:title="@string/label_menu_new_report"
            android:id="@+id/addNewReport"
            android:icon="@drawable/ic_new_item_list"/>
    </group>

    <item
        android:title="@string/label_menu_config"
        android:id="@+id/submenu_config">

        <menu>
            <item
                android:title="@string/label_menu_update_password"
                android:id="@+id/updatePassword"
                android:icon="@drawable/ic_action_password_reset"/>

            <item
                android:title="@string/label_menu_delete_account"
                android:id="@+id/removeUser"
                android:icon="@drawable/ic_action_delete"/>
        </menu>
    </item>

    <item
        android:title="@string/label_theme"
        android:id="@+id/submenu_theme">

        <menu>
            <item
                android:title="@string/label_theme"
                android:id="@+id/theme"
                android:icon="@drawable/ic_day_night"/>
        </menu>
    </item>

    <item
        android:title="@string/label_menu_others"
        android:id="@+id/submenu_others">

        <menu>
            <item
                android:title="@string/label_menu_about"
                android:id="@+id/about"
                android:icon="@drawable/ic_action_about_us"/>

            <item
                android:title="@string/label_menu_logout"
                android:id="@+id/login"
                android:icon="@drawable/ic_action_logout"/>
        </menu>
    </item>

</menu>