<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_resume"
        android:title="@string/summary"
        android:icon="@drawable/ic_list_check"
        app:showAsAction="ifRoom|withText"
        android:orderInCategory="101" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="ifRoom|withText"
        android:orderInCategory="102" />

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="ifRoom|withText"
        android:orderInCategory="103" />

    <item
        android:id="@+id/action_remove"
        android:title="@string/remove"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="ifRoom|withText"
        android:orderInCategory="104" />

</menu>