<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">

    <ProgressBar
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:id="@+id/sign_up_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView4"
        android:text="@string/label_screen_register"
        style="@style/TextTitleFormField"
        android:textColor="@color/colorTextBlack"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:text="@string/label_screen_register_create"
        style="@style/TextDescriptionFormField"
        android:textColor="@color/colorTextBlack"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/name"
        style="@style/FormField"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <EditText
        android:id="@+id/email"
        android:hint="@string/mail"
        style="@style/FormField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        style="@style/FormField"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/btn_signUp"
        android:text="@string/create"
        style="@style/ButtonFormField"
        android:onClick="sendSignUpData"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/txt7"
        android:text="@string/label_screen_already_register"
        style="@style/TextBottomFormField"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_login"
        android:text="@string/login"
        style="@style/TextBottomClickFormField"
        android:onClick="callLogin"
        app:layout_constraintBottom_toBottomOf="@+id/txt7"
        app:layout_constraintStart_toEndOf="@+id/txt7"
        app:layout_constraintTop_toTopOf="@+id/txt7" />


</androidx.constraintlayout.widget.ConstraintLayout>