<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_forget">

    <TextView
        android:id="@+id/textView4"
        android:text="@string/label_screen_to_recovery"
        style="@style/TextTitleFormField"
        android:layout_marginStart="0dp"
        android:textColor="@color/colorTextBlack"
        app:layout_constraintStart_toStartOf="@+id/txt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:text="@string/label_screen_recovery_worry"
        style="@style/TextDescriptionFormField"
        android:textColor="@color/colorTextBlack"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/txt"
        android:hint="@string/mail"
        style="@style/FormField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button"
        android:text="@string/label_to_recover"
        style="@style/ButtonFormField"
        app:layout_constraintStart_toStartOf="@+id/txt"
        app:layout_constraintTop_toBottomOf="@+id/txt" />

    <TextView
        android:id="@+id/txt7"
        android:text="@string/go_to_home"
        style="@style/TextBottomFormField"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>