<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.login.RecoveryLoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            style="@style/TextTitleFormField"
            android:text="@string/label_screen_to_recovery"
            app:layout_constraintStart_toStartOf="@+id/textInputEmailRecover"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextDescriptionFormField"
            android:text="@string/label_screen_recovery_worry"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmailRecover"
            style="@style/TextInputEmailForm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailRecover"
                style="@style/FormField"
                android:hint="@string/mail"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress|textAutoComplete" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/recoveryAccount"
            style="@style/ButtonFormField"
            android:onClick="btnRecoverAccount"
            android:text="@string/label_to_recover"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="@+id/textInputEmailRecover"
            app:layout_constraintTop_toBottomOf="@+id/textInputEmailRecover" />

        <TextView
            android:id="@+id/sendHome"
            style="@style/TextBottomFormField"
            android:text="@string/label_go_to_home"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoveryAccount"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>