<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_up"
            style="@style/TextTitleFormField"
            android:text="@string/label_screen_update_password"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintStart_toStartOf="@+id/textInputNewPassword"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_up2"
            style="@style/TextDescriptionFormField"
            android:text="@string/label_screen_update_strong"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/txt_up"
            app:layout_constraintTop_toBottomOf="@+id/txt_up" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNewPassword"
            style="@style/TextInputPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_up2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPassword"
                style="@style/FormField"
                android:hint="@string/hint_new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_up3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:padding="@dimen/margin_4"
            android:text="@string/label_screen_update_info"
            app:layout_constraintEnd_toEndOf="@+id/textInputNewPassword"
            app:layout_constraintStart_toStartOf="@+id/textInputNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/textInputNewPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputOldPassword"
            style="@style/TextInputPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_up3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/oldPassword"
                style="@style/FormField"
                android:hint="@string/hint_current_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnUpdate"
            style="@style/ButtonFormField"
            android:text="@string/change"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="@+id/textInputOldPassword"
            app:layout_constraintTop_toBottomOf="@+id/textInputOldPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>