<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".view.login.RemoveUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backButtonRemove"
            android:layout_width="@dimen/width_48"
            android:layout_height="@dimen/height_48"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_16"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true"
            android:padding="@dimen/padding_8"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_universal" />

        <TextView
            android:id="@+id/txt_up"
            style="@style/TextTitleFormField"
            android:text="@string/label_screen_remove_account"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintStart_toStartOf="@+id/textInputNewPassword"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_up2"
            style="@style/TextDescriptionFormField"
            android:text="@string/label_screen_remove_info"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_up"
            app:layout_constraintTop_toBottomOf="@+id/txt_up" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNewPassword"
            style="@style/TextInputPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_up2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/FormField"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signUp"
            style="@style/ButtonFormField"
            android:onClick="btnRemoveUser"
            android:text="@string/remove"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="@+id/textInputNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/textInputNewPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>