<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".view.login.RemoveUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_up"
            style="@style/TextTitleFormField"
            android:text="@string/label_screen_remove_account"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintStart_toStartOf="@+id/textInputDeleteAccount"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_up2"
            style="@style/TextDescriptionFormField"
            android:text="@string/label_screen_remove_info"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_up"
            app:layout_constraintTop_toBottomOf="@+id/txt_up" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputDeleteAccount"
            style="@style/TextInputPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_up2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/FormField"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonRemoved"
            style="@style/ButtonFormField"
            android:text="@string/remove"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="@+id/textInputDeleteAccount"
            app:layout_constraintTop_toBottomOf="@+id/textInputDeleteAccount" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>